Final version lr4