@@ -1,11 +1,13 @@
+import java.util.ArrayList;
 import java.util.List;
-import java.util.Scanner;
 
 public class Continent {
     private String name;
     private int numberOfCountries;
     private int square;
-    private List<Country> listOfCountries;
+    private List<Country> listOfCountries = new ArrayList<>();
+
+    private static int totalContinents = 0;
 
     public Continent() {
     }
@@ -53,60 +55,165 @@ public class Continent {
         return listOfCountries;
     }
 
-    public void input() {
-        Scanner scanner = new Scanner(System.in);
-        System.out.println("ВВОД КОНТИНЕНТА\n");
+    @Override
+    public boolean equals(Object object) {
+        if (!(object instanceof Continent))
+            return false;
+        Continent continent = (Continent) object;
+        return this.name.equals(continent.getName());
+    }
 
+
+    public void input(List<Continent> continentList) {
+        boolean flag;
+        System.out.println("\nВВОД КОНТИНЕНТА");
         do {
-            System.out.print("Введите название континента:");
-            while (!scanner.hasNextLine()) {
-                System.out.println("Ошибка ввода!\nВведите название континента: ");
-                scanner.next();
-            }
-            name = scanner.nextLine();
-            if (name.isBlank())
-                System.out.println("Данное поле не может быть пустым");
-        } while (name.isBlank());
-
-        do {
-            System.out.println("Введите количество стран: ");
-            while (!scanner.hasNextInt()) {
-                System.out.println("Ошибка ввода!\nВведите количество стран: ");
-                scanner.next();
-            }
-            numberOfCountries = scanner.nextInt();
-            if (numberOfCountries < 0)
-                System.out.println("Данное поле не может быть отрицательным!");
-        } while (numberOfCountries < 0);
-
-        do {
-            System.out.println("Введите площадь континента: ");
-            while (!scanner.hasNextInt()) {
-                System.out.println("Ошибка ввода!\nВведите площадь континента: ");
-                scanner.next();
-            }
-            square = scanner.nextInt();
-            if (square < 0)
-                System.out.println("Данное поле не может быть отрицательным!");
-        } while (square < 0);
-
-        scanner.close();
-
+            flag = false;
+            name = AuxiliaryClass.inputNameOfSomething("континента");
+            for (Continent otherContinent : continentList)
+                if ((this != otherContinent) && (this.equals(otherContinent))) {
+                    System.out.println("Данный континент уже есть в списке");
+                    flag = true;
+                }
+        } while (flag);
+        square = AuxiliaryClass.inputSquareOfSomething("континента");
+        numberOfCountries = AuxiliaryClass.inputNumberOfSomething("стран");
         do {
             Country country = new Country();
-            country.input();
+            country.input(listOfCountries);
             listOfCountries.add(country);
-        } while (AuxiliaryClass.answerYesOrNo("стран (y/n):"));
+        } while (AuxiliaryClass.answerYesOrNo("Желаете продолжить ввод стран (y/n):"));
+
+    }
+
+    public static void tableHeader() {
+        System.out.print("******************************************************" +
+                "*************************************************\n");
+        System.out.print("* Номер *     Континент      * Количество стран *" +
+                " Площадь континента *          Список стран          *\n");
+        System.out.print("******************************************************" +
+                "*************************************************\n");
     }
 
     public void output(int number) {
         System.out.printf("* %-5d * %-18s * %-16d * %-18d * ", number + 1, name, numberOfCountries, square);
-        System.out.printf("%-30s *\n", listOfCountries.getFirst().getName());
+        if (listOfCountries.isEmpty())
+            System.out.printf("%-30s *\n", AuxiliaryClass.listIsEmpty);
+        else
+            System.out.printf("%-30s *\n", listOfCountries.get(0).getName());
         for (int i = 1; i < listOfCountries.size(); i++) {
             System.out.printf("*       *                    *                  *                    * %-30s *\n",
                     listOfCountries.get(i).getName());
         }
         System.out.print("****************************************" +
                 "***************************************************************\n");
+    }
+
+    public int chooseCountry() {
+        int number = 0;
+        int i;
+        int size = listOfCountries.size();
+        if (!listOfCountries.isEmpty()) {
+            Country.tableHeader();
+            i = 0;
+            for (Country country : listOfCountries) {
+                country.output(i);
+                i++;
+            }
+            do {
+                System.out.print("Введите номер страны: ");
+                number = Main.scanner.nextInt();
+                if ((number < 1) || (number > size))
+                    System.out.println("Страны под данным номером нет в списке");
+            } while ((number < 1) || (number > size));
+            Main.scanner.nextLine();
+        }
+        return number - 1;
+    }
+
+    public void changeFields(List<Continent> continentList) {
+        boolean flag;
+        int number;
+        System.out.println("\nИЗМЕНЕНИЯ ПОЛЕЙ");
+        tableHeader();
+        output(0);
+        do {
+            System.out.println("1.Название континента");
+            System.out.println("2.Количество стран");
+            System.out.println("3.Площадь континента");
+            System.out.println("4.Список стран");
+            do {
+                System.out.print("Введите номер поля, который желаете изменить: ");
+                number = Main.scanner.nextInt();
+                if ((number < 1) || (number > 4))
+                    System.out.println("Поля с данным номером нет");
+            } while ((number < 1) || (number > 4));
+            Main.scanner.nextLine();
+            switch (number) {
+                case 1:
+                    do {
+                        flag = false;
+                        name = AuxiliaryClass.inputNameOfSomething("страны");
+                        for (Continent otherContinent : continentList)
+                            if ((this != otherContinent) && (this.equals(otherContinent))) {
+                                System.out.println("Данная страна уже есть в списке");
+                                flag = true;
+                            }
+                    } while (flag);
+                    break;
+                case 2:
+                    numberOfCountries = AuxiliaryClass.inputNumberOfSomething("стран");
+                    break;
+                case 3:
+                    square = AuxiliaryClass.inputSquareOfSomething("континента");
+                    break;
+                case 4:
+                    System.out.println("Для изменения списка стран перейдите по соответствующей команде в меню");
+                    break;
+                default:
+                    break;
+            }
+        } while (AuxiliaryClass.answerYesOrNo("Желаете продолжить изменение полей в данном континенте?"));
+    }
+
+    public void addNewCountry() {
+        int number;
+        if (listOfCountries.size() < numberOfCountries) {
+            Country country = new Country();
+            country.input(listOfCountries);
+            listOfCountries.add(country);
+            country.setAddressOfCompanies();
+        } else {
+            System.out.println("Достигнуто количество стран соответствующее введенному числу - "
+                    + numberOfCountries);
+            System.out.println("Для добавления новых стран в данный список вам необходимо изменить ");
+            System.out.println("число количества стран на данном континенте");
+            if (AuxiliaryClass.answerYesOrNo("Желаете это сделать?")) {
+                do {
+                    number = AuxiliaryClass.inputNumberOfSomething("стран");
+                    if (number <= listOfCountries.size())
+                        System.out.println("Данное число меньше или соответствует уже имеющемуся");
+                } while (number <= listOfCountries.size());
+                numberOfCountries = number;
+                addNewCountry();
+            }
+        }
+    }
+
+    public void removeCountryFromList() {
+        int number;
+        number = chooseCountry();
+        Country.tableHeader();
+        listOfCountries.get(number).output(0);
+        if (AuxiliaryClass.answerYesOrNo("Вы действительно желаете удалить данную страну из списка?"))
+            listOfCountries.remove(number);
+    }
+
+    public static void incrementTotalContinents() {
+        totalContinents++;
+    }
+
+    public static void printTotalContinents() {
+        System.out.println("Вы внесли в список " + totalContinents + " из 6 существующих континентов");
     }
 }
